[gd_scene load_steps=40 format=3 uid="uid://derlu8q1eb2jx"]

[ext_resource type="Script" uid="uid://bqtdtdw48u2h5" path="res://shop/slot_machine.gd" id="1_2njt7"]
[ext_resource type="Script" uid="uid://dvh37wnsy4miy" path="res://common/interactions/clickable_area3d.gd" id="3_1co26"]
[ext_resource type="Script" uid="uid://cn0hnx10ggkp0" path="res://common/animations/step_spinner.gd" id="3_7gwbg"]
[ext_resource type="Script" uid="uid://tnkdnrhaxat6" path="res://shop/slot_machine/slot_spinner.gd" id="4_2p75k"]
[ext_resource type="PackedScene" uid="uid://okag7g8u08rt" path="res://environment/monitors/digital_label_3d.tscn" id="4_aaf27"]
[ext_resource type="PackedScene" uid="uid://5rifllx08xxc" path="res://shop/slot_machine/box.tscn" id="5_6jkie"]
[ext_resource type="Script" uid="uid://cgdbxomapco3m" path="res://common/labels/error_label_3d.gd" id="5_qkg2o"]
[ext_resource type="AudioStream" uid="uid://bu4q6a236e7oa" path="res://assets/sfx/slot_machine/level_pull_01.wav" id="6_7jj2a"]
[ext_resource type="AudioStream" uid="uid://bt8yjtlru24ka" path="res://assets/sfx/slot_machine/box_down.ogg" id="6_13xgx"]
[ext_resource type="Script" uid="uid://c5yhj7vwcomgx" path="res://shop/slot_machine/box_spawner.gd" id="6_h6o38"]
[ext_resource type="AudioStream" uid="uid://c20dck4uoaydv" path="res://assets/sfx/slot_machine/level_pull_02.wav" id="7_13xgx"]
[ext_resource type="PackedScene" uid="uid://b0y802ebnhvd5" path="res://assets/props/slot_machine_2/slot_machine.glb" id="8_6jkie"]
[ext_resource type="AudioStream" uid="uid://cxkcjnnwr8311" path="res://assets/sfx/slot_machine/level_pull_03.wav" id="8_rosq1"]
[ext_resource type="Script" uid="uid://doq52rt8oocmd" path="res://shop/slot_machine/shop_label.gd" id="9_aaf27"]
[ext_resource type="AudioStream" uid="uid://dxey4awrp2tvq" path="res://assets/sfx/slot_machine/level_pull_04.wav" id="9_sjuok"]
[ext_resource type="AudioStream" uid="uid://ckpjbrkhduime" path="res://assets/sfx/slot_machine/level_pull_05.wav" id="10_ii2y4"]
[ext_resource type="Script" uid="uid://cpelv7p3e1pqj" path="res://common/audio/smooth_audio_stream_player.gd" id="10_l42sb"]
[ext_resource type="AudioStream" uid="uid://b050xikvsy5rv" path="res://assets/sfx/slot_machine/spinning_looped.ogg" id="15_7jj2a"]
[ext_resource type="AudioStream" uid="uid://c3u4424s0t8o1" path="res://assets/sfx/load_01.ogg" id="18_rosq1"]
[ext_resource type="AudioStream" uid="uid://bw2mxssm7xio5" path="res://assets/sfx/slot_machine/lose.wav" id="19_sjuok"]
[ext_resource type="AudioStream" uid="uid://bo6sdwx3p1hql" path="res://assets/sfx/money/earn_01.ogg" id="20_15u0y"]
[ext_resource type="AudioStream" uid="uid://d0lvdymk7rqop" path="res://assets/sfx/money/earn_02.ogg" id="21_qkg2o"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2p75k"]
size = Vector3(0.2, 0.8, 0.2)

[sub_resource type="Animation" id="Animation_6jkie"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Slot Machine AnimationPlayer/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aaf27"]
resource_name = "idle"
length = 0.001

[sub_resource type="Animation" id="Animation_2njt7"]
resource_name = "work"
length = 0.20000334
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.1, 0.13333334, 0.20000002),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.01, 0), Vector3(0, 0, 0), Vector3(0, 0.01, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.20000002),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.017453292), Vector3(0, 0, -0.017453292), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Slot Machine AnimationPlayer/AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aaf27"]
_data = {
&"RESET": SubResource("Animation_6jkie"),
&"idle": SubResource("Animation_aaf27"),
&"work": SubResource("Animation_2njt7")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rosq1"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("6_13xgx")

[sub_resource type="Animation" id="Animation_1co26"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slot_machine2/box_body/body/lever:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("slot_machine2/box_body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("slot_machine2/box_body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.128398, 0.00666977)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("slot_machine2/box_body:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimationPlayer/Hover Stream Player:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2p75k"]
resource_name = "hover"
length = 0.200003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slot_machine2/box_body/body/lever:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, -2, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0872665, 0, 0), Vector3(-0.0872665, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/Hover Stream Player:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0sub2"]
resource_name = "idle"
length = 0.800003
loop_mode = 1

[sub_resource type="Animation" id="Animation_h6o38"]
resource_name = "open"
length = 0.800003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slot_machine2/box_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.266667, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.128398, 0.00666977), Vector3(0, 0.128398, 0.00666977), Vector3(0, 0.5, 0.007), Vector3(0, 0.128398, 0.00666977), Vector3(0, 0.128398, 0.00666977)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("slot_machine2/box_body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2, 0.266667, 0.366667, 0.433333, 0.533333, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.85, 1), Vector3(1, 1.2, 1), Vector3(1, 1, 1), Vector3(1, 1.2, 1), Vector3(1, 0.9, 1), Vector3(1, 1.1, 1), Vector3(1, 1, 1), Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("slot_machine2/box_body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2, 0.4, 0.433333, 0.466667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.174533, 0, 0), Vector3(-0.436332, 0, 0), Vector3(0.0872665, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.26666668),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open_boxes"
}]
}

[sub_resource type="Animation" id="Animation_7gwbg"]
resource_name = "use"
length = 0.800003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slot_machine2/box_body/body/lever:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.266666, 0.4, 0.433333, 0.733333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.436332, 0, 0), Vector3(-0.698132, 0, 0), Vector3(2.0944, 0, 0), Vector3(2.79253, 0, 0), Vector3(-0.436332, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("slot_machine2/box_body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.133333, 0.266666, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.174533, 0, 0), Vector3(0, 0, 0), Vector3(0.0872665, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("slot_machine2/box_body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.133333, 0.266666, 0.4, 0.466667, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.128398, 0.00666977), Vector3(0, 0.185052, 0.00666977), Vector3(0, 0.128398, 0.00666977), Vector3(0, 0.150567, 0.00666977), Vector3(0, 0.128398, 0.00666977)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_spin"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("slot_machine2/box_body:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.366667, 0.4, 0.466667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 1), Vector3(1, 1.05, 1), Vector3(1, 1, 1), Vector3(1, 0.95, 1), Vector3(1, 1, 1), Vector3(1, 1, 1)]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimationPlayer/Pull Lever Audio Player")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.4511245,
"start_offset": 0.0,
"stream": ExtResource("6_7jj2a")
}, {
"end_offset": 0.44851747,
"start_offset": 0.0,
"stream": ExtResource("7_13xgx")
}, {
"end_offset": 0.4496705,
"start_offset": 0.0,
"stream": ExtResource("8_rosq1")
}, {
"end_offset": 0.44851747,
"start_offset": 0.0,
"stream": ExtResource("9_sjuok")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_ii2y4")
}],
"times": PackedFloat32Array(0.03333333, 0.1, 0.16666667, 0.23333333, 0.3)
}
tracks/5/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2p75k"]
_data = {
&"RESET": SubResource("Animation_1co26"),
&"hover": SubResource("Animation_2p75k"),
&"idle": SubResource("Animation_0sub2"),
&"open": SubResource("Animation_h6o38"),
&"use": SubResource("Animation_7gwbg")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7jj2a"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("6_7jj2a")
stream_1/stream = ExtResource("7_13xgx")
stream_2/stream = ExtResource("8_rosq1")
stream_3/stream = ExtResource("9_sjuok")

[sub_resource type="BoxShape3D" id="BoxShape3D_aaf27"]
size = Vector3(1.3273437, 1.286, 0.826416)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sjuok"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("18_rosq1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ii2y4"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("19_sjuok")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ktspq"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 2
stream_0/stream = ExtResource("20_15u0y")
stream_1/stream = ExtResource("21_qkg2o")

[node name="Slot Machine" type="Node3D"]
script = ExtResource("1_2njt7")

[node name="slot_machine2" parent="." instance=ExtResource("8_6jkie")]

[node name="box_body" parent="slot_machine2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.128398, 0.00666977)

[node name="cylinder_1" parent="slot_machine2/box_body/body" index="1"]
transform = Transform3D(0.38044697, 0, 0, 0, 0.21266349, 0.14251795, 0, -0.08592163, 0.35274428, -0.326, -0.00010788441, 9.8243356e-05)

[node name="cylinder_2" parent="slot_machine2/box_body/body" index="2"]
transform = Transform3D(0.38044655, 0, 0, 0, 0.21266365, 0.14251778, 0, -0.08592169, 0.35274386, -0.0005132538, 0.00020867586, 0.00028329343)

[node name="cylinder_3" parent="slot_machine2/box_body/body" index="3"]
transform = Transform3D(0.38044655, 0, 0, 0, 0.21266365, 0.14251778, 0, -0.08592169, 0.35274386, 0.3262687, 0.00020867586, 0.00028329343)

[node name="lever" parent="slot_machine2/box_body/body" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.568428, 0, 0)

[node name="ClickableLever" type="Area3D" parent="slot_machine2/box_body/body/lever" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 0.0688995, 0, 0)
monitoring = false
monitorable = false
script = ExtResource("3_1co26")
metadata/_custom_type_script = "uid://dvh37wnsy4miy"

[node name="CollisionShape3D" type="CollisionShape3D" parent="slot_machine2/box_body/body/lever/ClickableLever"]
transform = Transform3D(1, 7.10543e-15, 0, -7.10543e-15, 1, 0, 0, 0, 1, 0, 0.238488, 0)
shape = SubResource("BoxShape3D_2p75k")

[node name="Digital Label3D" parent="slot_machine2/box_body/body/monitor" index="0" instance=ExtResource("4_aaf27")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.19858152, 0.9800842, 0, -0.9800842, 0.19858152, 0, 0.0057765245, 0.0021109432)
modulate = Color(0.3764706, 0.9882353, 0.46666667, 0.7019608)
outline_modulate = Color(0.14901961, 0.36862746, 0.18431373, 0.7019608)
text = "welcome back"
font_size = 14
outline_size = 6

[node name="ErrorLabel3D" type="Node" parent="slot_machine2/box_body/body/monitor/Digital Label3D" node_paths=PackedStringArray("label")]
unique_name_in_owner = true
script = ExtResource("5_qkg2o")
label = NodePath("..")
error_color = Color(1, 0, 0, 0.7019608)
outline_color = Color(0.54509807, 0, 0, 0.7019608)
metadata/_custom_type_script = "uid://cgdbxomapco3m"

[node name="top_panel_details" parent="slot_machine2/box_body/body" index="6"]
visible = false

[node name="box_1" parent="slot_machine2/box_body" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35126054, 0.0020415292, 0.179423)
visible = false

[node name="box_2" parent="slot_machine2/box_body" index="2"]
visible = false

[node name="box_3" parent="slot_machine2/box_body" index="3"]
visible = false

[node name="box_4" parent="slot_machine2/box_body" index="4" instance=ExtResource("5_6jkie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.35126054, 0.0020415336, 0.179423)

[node name="box_5" parent="slot_machine2/box_body" index="5" instance=ExtResource("5_6jkie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0020415336, 0.18085803)

[node name="box_6" parent="slot_machine2/box_body" index="6" instance=ExtResource("5_6jkie")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35126036, 0.0020415336, 0.18085803)

[node name="Slot Machine AnimationPlayer" type="AnimationPlayer" parent="slot_machine2"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_aaf27")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="slot_machine2/Slot Machine AnimationPlayer"]
stream = SubResource("AudioStreamRandomizer_rosq1")
volume_db = -16.0
pitch_scale = 2.0

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7728111, -0.6346361, 0, 0.6346361, 0.7728111, 0, -0.028108984, 1.1712333)
light_color = Color(1, 0.85, 0.85, 1)
light_energy = 0.0
spot_range = 2.0
spot_attenuation = -2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_2p75k")
}
autoplay = "idle"

[node name="Pull Lever Audio Player" type="AudioStreamPlayer" parent="AnimationPlayer"]
pitch_scale = 2.0

[node name="Hover Stream Player" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = SubResource("AudioStreamRandomizer_7jj2a")
volume_db = -12.0

[node name="Slot Spinner" type="Node" parent="." node_paths=PackedStringArray("cylinders", "timer")]
unique_name_in_owner = true
script = ExtResource("4_2p75k")
cylinders = [NodePath("Cylinder1 StepSpinner"), NodePath("Cylinder2 StepSpinner"), NodePath("Cylinder3 StepSpinner")]
timer = NodePath("Timer")

[node name="Cylinder1 StepSpinner" type="Node" parent="Slot Spinner" node_paths=PackedStringArray("target")]
script = ExtResource("3_7gwbg")
target = NodePath("../../slot_machine2/box_body/body/cylinder_1")
angle_for_step = 40.0
duration_per_step = 0.1
metadata/_custom_type_script = "uid://cn0hnx10ggkp0"

[node name="Cylinder2 StepSpinner" type="Node" parent="Slot Spinner" node_paths=PackedStringArray("target")]
script = ExtResource("3_7gwbg")
target = NodePath("../../slot_machine2/box_body/body/cylinder_2")
angle_for_step = 40.0
duration_per_step = 0.1
metadata/_custom_type_script = "uid://cn0hnx10ggkp0"

[node name="Cylinder3 StepSpinner" type="Node" parent="Slot Spinner" node_paths=PackedStringArray("target")]
script = ExtResource("3_7gwbg")
target = NodePath("../../slot_machine2/box_body/body/cylinder_3")
angle_for_step = 40.0
duration_per_step = 0.1
metadata/_custom_type_script = "uid://cn0hnx10ggkp0"

[node name="Timer" type="Timer" parent="Slot Spinner"]
one_shot = true

[node name="BoxSpawner" type="Node" parent="." node_paths=PackedStringArray("boxes")]
unique_name_in_owner = true
script = ExtResource("6_h6o38")
boxes = [NodePath("../slot_machine2/box_body/box_4"), NodePath("../slot_machine2/box_body/box_5"), NodePath("../slot_machine2/box_body/box_6")]
metadata/_custom_type_script = "uid://c5yhj7vwcomgx"

[node name="ShopLabel" type="Node" parent="." node_paths=PackedStringArray("slot_machine", "digital", "error_digital", "spawner", "spinner", "lever")]
script = ExtResource("9_aaf27")
slot_machine = NodePath("..")
digital = NodePath("../slot_machine2/box_body/body/monitor/Digital Label3D")
error_digital = NodePath("../slot_machine2/box_body/body/monitor/Digital Label3D/ErrorLabel3D")
spawner = NodePath("../BoxSpawner")
spinner = NodePath("../Slot Spinner")
lever = NodePath("../slot_machine2/box_body/body/lever/ClickableLever")
metadata/_custom_type_script = "uid://doq52rt8oocmd"

[node name="ClickableArea3D" type="Area3D" parent="."]
monitoring = false
monitorable = false
script = ExtResource("3_1co26")
metadata/_custom_type_script = "uid://dvh37wnsy4miy"

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClickableArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.07115835, 0.6548462, -0.06604004)
shape = SubResource("BoxShape3D_aaf27")

[node name="Spining Audio Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_7jj2a")
playback_type = 1
script = ExtResource("10_l42sb")
initial_db = 0.0
target_db = -30.0
metadata/_custom_type_script = "uid://cpelv7p3e1pqj"

[node name="Buy Audio Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sjuok")

[node name="Error Audio Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ii2y4")
volume_db = -16.0
pitch_scale = 0.8

[node name="Spend Money Audio Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ktspq")
volume_db = -14.0
pitch_scale = 1.4

[editable path="slot_machine2"]
